==> ARMmbed/mbed-os/targets/TARGET_TI/TARGET_MSP432/serial_api.c <==
#include "serial_api.h"
#include "mbed_assert.h"
#include "mbed_error.h"
#include <string.h>
#define SERIAL_S(obj) (&((obj)->serial))
#define SERIAL_S(obj) (obj)

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    struct serial_s *objs = SERIAL_S(obj);
    uint8_t stdio_config = 0;

    /* Determine the UART to use (UART_A0...UART_A3) */
    UARTName uart_tx = (UARTName)pinmap_peripheral(tx, PinMap_UART_TX);
    UARTName uart_rx = (UARTName)pinmap_peripheral(rx, PinMap_UART_RX);
    UARTName uart    = (UARTName)pinmap_merge(uart_tx, uart_rx);
    MBED_ASSERT(objs->uart != (UARTName)NC);
    /* Fill the obj structure */
    objs->uart   = uart;
    objs->pin_tx = tx;
    objs->pin_rx = rx;

    /* Check if we selected the STDIO UART */
    if ((tx == STDIO_UART_TX) || (rx == STDIO_UART_RX)) {
        stdio_config = 1;
    }
    /* Configure the TX and RX pins */
    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);

    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    /* put EUSCI module in reset state */
    EUSCI->CTLW0 = EUSCI_A_CTLW0_SWRST;
    /* Configure SMCLK as clock source */
    EUSCI->CTLW0 |= EUSCI_A_CTLW0_SSEL__SMCLK;
    /* Disable modulation stages */
    EUSCI->MCTLW &= ~(EUSCI_A_MCTLW_BRS_MASK |
                      EUSCI_A_MCTLW_BRF_MASK |
                      EUSCI_A_MCTLW_OS16);
    /* Disable interrupts */
    EUSCI->IE = 0;
    /* enable the UART module again */
    EUSCI->CTLW0 &= ~EUSCI_A_CTLW0_SWRST;
    /* Set default baud rate */
    serial_baud(obj, 9600);
    /* Copy config to stdio structure if needed */
    if (stdio_config) {
        memcpy(&stdio_uart, obj, sizeof(serial_t));
        stdio_uart_inited = 1;
    }
}

void serial_free(serial_t *obj)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    /* Wait for pending operations */
    while (EUSCI->STATW & EUSCI_A_STATW_BUSY);
    /* Put UART to reset state */
    EUSCI->CTLW0 = EUSCI_A_CTLW0_SWRST;
    /* De-configure the RX/TX lines */
    pin_function(objs->pin_tx, MSP432_PIN_DATA(SEL0, PIN_INPUT, PullNone, 0));
    pin_function(objs->pin_rx, MSP432_PIN_DATA(SEL0, PIN_INPUT, PullNone, 0));
}

void serial_baud(serial_t *obj, int baudrate)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    EUSCI->BRW = (uint16_t)(SubsystemMasterClock / baudrate);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    /* put module in reset state */
    EUSCI->CTLW0 |= EUSCI_A_CTLW0_SWRST;
    /* Configure data bits */
    switch (data_bits) {
        case 7:
            EUSCI->CTLW0 |= EUSCI_A_CTLW0_SEVENBIT;
            break;
        case 8:
            EUSCI->CTLW0 &= ~EUSCI_A_CTLW0_SEVENBIT;
            break;
        default:
            error("Unsupported UART data-bit size");
    }
    /* Configure parity */
    switch (parity) {
        case ParityNone:
            EUSCI->CTLW0 &= ~EUSCI_A_CTLW0_PEN;
            break;
        case ParityOdd:
            EUSCI->CTLW0 |=  EUSCI_A_CTLW0_PEN;
            EUSCI->CTLW0 &= ~EUSCI_A_CTLW0_PAR;
            break;
        case ParityEven:
            EUSCI->CTLW0 |= EUSCI_A_CTLW0_PEN;
            EUSCI->CTLW0 |= EUSCI_A_CTLW0_PAR;
            break;
        case ParityForced1:
        case ParityForced0:
        default:
            error("Unsupported UART parity selection");
    }
    /* Configure stop bits */
    switch (data_bits) {
        case 1:
            EUSCI->CTLW0 &= ~EUSCI_A_CTLW0_SPB;
            break;
        case 2:
            EUSCI->CTLW0 |= EUSCI_A_CTLW0_SPB;
            break;
        default:
            error("Unsupported UART stop-bit size");
    }
    /* re-enable the UART module */
    EUSCI->CTLW0 &= ~EUSCI_A_CTLW0_SWRST;
}

void serial_irq_handler(serial_t *obj, uart_irq_handler handler, uint32_t id)
{
    struct serial_s *objs = SERIAL_S(obj);
    uart_handler = handler;
    /* UART base addresses are
     * EUSCI_A0 0x40001000
     * EUSCI_A1 0x40001400
     * EUSCI_A2 0x40001800
     * EUSCI_A3 0x40001c00 */
    uint8_t index = (((uint32_t)(objs->uart)) >> 10) & 0x3;
    serial_irq_ids[index] = id;
    /* Enable the NVIC irq for this UART */
    NVIC_EnableIRQ((IRQn_Type)(EUSCIA0_IRQn + index));
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    switch (irq) {
        case RxIrq:
            BITBAND_PERI(EUSCI->IE, EUSCI_A_IE_RXIE_OFS) = enable;
            break;
        case TxIrq:
            BITBAND_PERI(EUSCI->IE, EUSCI_A_IE_TXIE_OFS) = enable;
            break;
    }
}

int serial_getc(serial_t *obj)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    /* Wait until the RX Buffer is filled.... */
    while ((EUSCI->IFG & EUSCI_A_IFG_RXIFG) == 0);
    /*Transfer single char from RX buffer */
    return EUSCI->RXBUF;
}

void serial_putc(serial_t *obj, int c)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    /* Wait until the TX Buffer is empty.... */
    while ((EUSCI->IFG & EUSCI_A_IFG_TXIFG) == 0);
    /* Transfer single char to TX buffer */
    EUSCI->TXBUF = (uint16_t)c;
}

int serial_readable(serial_t *obj)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    return EUSCI->IFG & EUSCI_A_IFG_RXIFG;
}

int serial_writable(serial_t *obj)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    return EUSCI->IFG & EUSCI_A_IFG_TXIFG;
}

void serial_clear(serial_t *obj)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    /* Clear all flags */
    EUSCI->IFG = 0;
}

void serial_break_set(serial_t *obj)
{
    struct serial_s *objs = SERIAL_S(obj);
    /* Get the UART base */
    EUSCI_A_Type *EUSCI = (EUSCI_A_Type *)objs->uart;
    /* Wait until the TX Buffer is empty.... */
    while ((EUSCI->IFG & EUSCI_A_IFG_TXIFG) == 0);
    /* Send break (automatically cleared) */
    EUSCI->CTLW0 |= EUSCI_A_CTLW0_TXBRK;
}
