==> ARMmbed/mbed-os/targets/TARGET_Geehy/TARGET_APM32F4XX/serial_api.c <==
#include "mbed_assert.h"
#include "serial_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include "mbed_error.h"
#include <string.h>
#include "PeripheralPins.h"
#define USART_NUM   6
#define GET_SERIAL_S(obj) (&((obj)->serial))
#define GET_SERIAL_S(obj) (obj)

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);

    UARTName usart_tx = (UARTName)pinmap_peripheral(tx,PinMap_UART_TX);
    UARTName usart_rx = (UARTName)pinmap_peripheral(rx,PinMap_UART_RX);

    per_obj->uart = (UARTName)pinmap_merge(usart_tx,usart_rx);
    MBED_ASSERT(per_obj->uart != (UARTName)NC);

    /* Enable USART Clock */
    switch (per_obj->uart)
    {
        case UART_1:
            RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_USART1);
            per_obj->index = 0;
            break;
        case UART_2:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_USART2);
            per_obj->index = 1;
            break;
        case UART_3:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_USART3);
            per_obj->index = 2;
            break;
        case UART_4:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_UART4);
            per_obj->index = 3;
            break;
        case UART_5:
            RCM_EnableAPB1PeriphClock(RCM_APB1_PERIPH_UART5);
            per_obj->index = 4;
            break;
        case UART_6:
             RCM_EnableAPB2PeriphClock(RCM_APB2_PERIPH_USART6);
            per_obj->index = 5;
            break;
    }

    /* Config the pins */
    pinmap_pinout(tx,PinMap_UART_TX);
    pinmap_pinout(rx,PinMap_UART_RX);

    /* Config default parameters */
    per_obj->baudrate = 9600U;
    per_obj->databits = USART_WORD_LEN_8B;
    per_obj->stopbits = USART_STOP_BIT_1;
    per_obj->parity = USART_PARITY_NONE;

#if DEVICE_SERIAL_FC
    per_obj->hw_flow_ctl = USART_HARDWARE_FLOW_NONE;
#endif /* DEVICE_SERIAL_FC */

    per_obj->pin_tx = tx;
    per_obj->pin_rx = rx;

    per_obj->tx_state = OP_STATE_BUSY;
    per_obj->rx_state = OP_STATE_BUSY;

    usart_init(per_obj);

    per_obj->tx_state = OP_STATE_READY;
    per_obj->rx_state = OP_STATE_READY;
    
    if (per_obj->uart == STDIO_UART)
    {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart,obj,sizeof(serial_t));
    }
}

void serial_free(serial_t *obj)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;
    USART_T* uart = uart_clk[per_obj->index];

    USART_Reset(usart);

    /* Disable USART Clock */
    switch ((uint32_t)uart)
    {
        case UART_1:
            RCM_DisableAPB2PeriphClock(RCM_APB2_PERIPH_USART1);
            per_obj->index = 0;
            break;
        case UART_2:
            RCM_DisableAPB1PeriphClock(RCM_APB1_PERIPH_USART2);
            per_obj->index = 1;
            break;
        case UART_3:
            RCM_DisableAPB1PeriphClock(RCM_APB1_PERIPH_USART3);
            per_obj->index = 2;
            break;
        case UART_4:
            RCM_DisableAPB1PeriphClock(RCM_APB1_PERIPH_UART4);
            per_obj->index = 3;
            break;
        case UART_5:
            RCM_DisableAPB1PeriphClock(RCM_APB1_PERIPH_UART5);
            per_obj->index = 4;
            break;
        case UART_6:
            RCM_DisableAPB2PeriphClock(RCM_APB2_PERIPH_USART6);
            per_obj->index = 5;
            break;
    }

    serial_irq_ids[per_obj->index] = 0;

    /* Reset the gpio state */
    pin_function(per_obj->pin_tx,PullNone);
    pin_function(per_obj->pin_rx,PullNone);
}

void serial_baud(serial_t *obj, int baudrate)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;
    per_obj->baudrate = baudrate;

    USART_Disable(usart);

    USART_Config_T usartConfig;
    usartConfig.baudRate = baudrate;
    usartConfig.hardwareFlow = per_obj->hw_flow_ctl;
    usartConfig.mode = USART_MODE_TX_RX;
    usartConfig.parity = per_obj->parity;
    usartConfig.stopBits = per_obj->stopbits;
    usartConfig.wordLength = per_obj->databits;
    USART_Config(usart,&usartConfig);

    USART_Enable(usart);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;

    USART_Disable(usart);

    USART_Config_T usartConfig;
    usartConfig.baudRate = per_obj->baudrate;
    usartConfig.hardwareFlow = per_obj->hw_flow_ctl;
    usartConfig.mode = USART_MODE_TX_RX;

    /* Change the parity value */
    switch (parity)
    {
        case ParityOdd:
            per_obj->parity = USART_PARITY_ODD;
            usartConfig.parity = USART_PARITY_ODD;
            break;
        case ParityEven:
            per_obj->parity = USART_PARITY_EVEN;
            usartConfig.parity = USART_PARITY_EVEN;
            break;
        case ParityForced0:
        case ParityForced1:
        default:
            per_obj->parity = USART_PARITY_NONE;
            usartConfig.parity = USART_PARITY_NONE;
            break;
    }

    /* Change the data_bits value */
    switch (data_bits)
    {
        case 7:
            if (parity != USART_PARITY_NONE)
            {
                per_obj->parity = USART_WORD_LEN_8B;
                usartConfig.wordLength = USART_WORD_LEN_8B;
            }
            else
            {            
                error("7-bit data format without parity is not supported");
            }
            break;
        case 8:
            if (parity != USART_PARITY_NONE)
            {
                per_obj->parity = USART_WORD_LEN_9B;
                usartConfig.wordLength = USART_WORD_LEN_9B;
            }
            else
            {
                per_obj->parity = USART_WORD_LEN_8B;
                usartConfig.wordLength = USART_WORD_LEN_8B;
            }
            break;
        case 9:
            if (parity != USART_PARITY_NONE)
            {
                error("9-bit data format without parity is not supported");
            }
            else
            {   
                per_obj->parity = USART_WORD_LEN_9B;
                usartConfig.wordLength = USART_WORD_LEN_9B;
            }
            break;
        default:
            error("Only 7, 8 or 9-bit data formats are supported");
            break;
    }

    /* Change the stop_bits value */
    if (stop_bits == 2)
    {
        usartConfig.stopBits = USART_STOP_BIT_2;
    }
    else
    {
        usartConfig.stopBits = USART_STOP_BIT_1;
    }

    USART_Config(usart,&usartConfig);
    USART_Enable(usart);
}

void serial_irq_handler(serial_t *obj, uart_irq_handler handler, uint32_t id)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);

    irq_handler = handler;
    serial_irq_ids[per_obj->index] = id;
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;
    IRQn_Type irq_n = 0;
    uint32_t vector = 0;

    switch (per_obj->uart)
    {
        case UART_1:
            irq_n = USART1_IRQn;
            vector = (uint32_t)&usart1_irq;
            break;
        case UART_2:
            irq_n = USART2_IRQn;
            vector = (uint32_t)&usart2_irq;
            break;
        case UART_3:
            irq_n = USART3_IRQn;
            vector = (uint32_t)&usart3_irq;
            break;
        case UART_4:
            irq_n = UART4_IRQn;
            vector = (uint32_t)&uart4_irq;
            break;
        case UART_5:
            irq_n = UART5_IRQn;
            vector = (uint32_t)&uart5_irq;
            break;
        case UART_6:
            irq_n = USART6_IRQn;
            vector = (uint32_t)&usart6_irq;
            break;
    }

    if (enable)
    {
        if (irq == RxIrq)
        {
            /* Enable USART RX IRQ */
            USART_EnableInterrupt(usart,USART_INT_RXBNE);
        }
        else
        {
            /* Enable USART TX IRQ */
            USART_EnableInterrupt(usart,USART_INT_TXBE);
        }
        
        NVIC_SetVector(irq_n,vector);
        NVIC_EnableIRQ(irq_n);
    }
    else
    {
        if (irq == RxIrq)
        {
            USART_DisableInterrupt(usart,USART_INT_RXBNE);
        }
        else
        {
            USART_DisableInterrupt(usart,USART_INT_TXBE);
        }
    }
}

int serial_getc(serial_t *obj)
{
    int ret = 0;
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;

    while (!serial_readable(obj));
    if (per_obj->parity == USART_PARITY_NONE)
    {
        ret = (int)(usart->DATA & 0x1ff);
    }
    else
    {
        if (per_obj->databits == USART_WORD_LEN_8B)
        {
            ret = (int)(usart->DATA & 0x7f);
        }
        else
        {
            ret = (int)(usart->DATA & 0xff);
        }
    }
    return ret;
}

void serial_putc(serial_t *obj, int c)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;

    while (!serial_writable(obj));
    usart->DATA = (uint32_t)(c & 0x1ff);
}

int serial_readable(serial_t *obj)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;

    return (USART_ReadStatusFlag(usart, USART_FLAG_RXBNE) != RESET) ? 1 : 0;
}

int serial_writable(serial_t *obj)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;

    return (USART_ReadStatusFlag(usart, USART_FLAG_TXBE) != RESET) ? 1 : 0;
}

void serial_clear(serial_t *obj)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);

    per_obj->tx_count = 0U;
    per_obj->rx_count = 0U;
}

void serial_break_set(serial_t *obj)
{
    struct serial_s *per_obj = GET_SERIAL_S(obj);
    USART_T *usart = (USART_T*)per_obj->uart;

    USART_TxBreak(usart);
}
